--- a/pom.xml
+++ b/pom.xml
@@ -6,11 +6,17 @@
 
     <groupId>top.maishuren</groupId>
     <artifactId>vertx-web-job</artifactId>
+    <packaging>pom</packaging>
     <version>0.1</version>
+    <modules>
+        <module>rest-app</module>
+        <module>spring-example</module>
+    </modules>
 
     <properties>
         <maven.compiler.source>11</maven.compiler.source>
         <maven.compiler.target>11</maven.compiler.target>
+        <resteasy.version>3.1.0.Final</resteasy.version>
     </properties>
 
     <dependencies>
@@ -19,21 +25,7 @@
             <artifactId>vertx-core</artifactId>
             <version>4.3.1</version>
         </dependency>
-        <dependency>
-            <groupId>org.springframework</groupId>
-            <artifactId>spring-context</artifactId>
-            <version>5.2.7.RELEASE</version>
-        </dependency>
-        <dependency>
-            <groupId>org.slf4j</groupId>
-            <artifactId>jcl-over-slf4j</artifactId>
-            <version>1.7.20</version>
-        </dependency>
-        <dependency>
-            <groupId>ch.qos.logback</groupId>
-            <artifactId>logback-classic</artifactId>
-            <version>1.2.3</version>
-        </dependency>
+
     </dependencies>
     <build>
         <plugins>
@@ -72,16 +64,19 @@
                         </goals>
                         <configuration>
                             <transformers>
-                                <transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
+                                <transformer
+                                        implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
                                     <manifestEntries>
                                         <Main-Class>top.maishuren.MainApplication</Main-Class>
                                     </manifestEntries>
                                 </transformer>
-                                <transformer implementation="org.apache.maven.plugins.shade.resource.ServicesResourceTransformer"/>
+                                <transformer
+                                        implementation="org.apache.maven.plugins.shade.resource.ServicesResourceTransformer"/>
                             </transformers>
                             <artifactSet>
                             </artifactSet>
-                            <outputFile>${project.build.directory}/${project.artifactId}-${project.version}.jar</outputFile>
+                            <outputFile>${project.build.directory}/${project.artifactId}-${project.version}.jar
+                            </outputFile>
                         </configuration>
                     </execution>
                 </executions>
